<resources>
    <string name="app_name">BMS</string>
    <string name="BLE_disconnected">未连接</string>
    <string name="menu_language">English</string>
    <string name="menu_upgarde">升级</string>
    <string name="ble_Unbind">未绑定</string>
    <string name="ble_StopSearch">已停止搜索</string>
    <string name="ble_Searching">正在搜索</string>
    <string name="ble_Connecting">正在连接</string>
    <string name="ble_Connected">已连接</string>
    <string name="ble_SearchClosure">搜索结束</string>
    <string name="real_MainInfo">主要信息</string>
    <string name="real_SingleV">单体电压</string>
    <string name="real_Warning">告警信息</string>
    <string name="real_HistoricalExtremum">历史极值</string>

    <string name="upgradeBt">升级</string>
    <string name="clear">清空</string>
    <string name="blanceState">均衡状态</string>
    <string name="upgrade">升级</string>
    <string name="history">历史数据</string>
    <string name="readAndSave">读取并保存</string>
    <string name="historyExtremeRecord">历史极值记录</string>
    <string name="hisMaxChgVAndCycle">历史最大充电电压(mV)及所在循环数</string>
    <string name="hisMinDischgVAndCycle">历史最小放电电压(mV)及所在循环数</string>
    <string name="hisMaxDifferAndCycle">历史最大压差(mV)及所在循环数</string>
    <string name="hisMaxDischgCAndCycle">历史最大放电电流(A)及所在循环数</string>
    <string name="hisMaxChgCAndCycle">历史最大充电电流(A)及所在循环数</string>
    <string name="hisMaxChgTAndCycle">历史最大充电温度(°C)及所在循环数</string>
    <string name="hisMinChgTAndCycle">历史最小充电温度(°C)及所在循环数</string>
    <string name="hisMaxDIschgTAndCycle">历史最大放电温度(°C)及所在循环数</string>
    <string name="hisMinDischgTAndCycle">历史最小放电温度(°C)及所在循环数</string>
    <string name="history_extreme_record">历史极值记录</string>

    <string name="hardwareVersionNumber">硬件版本号:</string>
    <string name="SoftVersion">软件版本号:</string>
    <string name="FlightControlProtocol">飞控协议:</string>
    <string name="FlightControlVersionNumber">飞控版本:</string>
    <string name="BatteryProductionDate">电池生产日期:</string>
    <string name="bmsPD">BMS生产日期:</string>
    <string name="packBC">Pack条形码:</string>
    <string name="bmsBarCode">BMS条形码:</string>
    <string name="cellType">电芯类型:</string>
    <string name="CellModel">电芯型号:</string>
    <string name="BatteriesSeriesNumber">电芯串数:</string>
    <string name="TypeOfFrontEndChip">前端芯片:</string>
    <string name="bmsModel">BMS型号:</string>
    <string name="customerCode">客户编码:</string>
    <string name="BatteryManufacturerCode">电池产商编码:</string>
    <string name="VendorCode">销售商编码 :</string>
    <string name="FullChargeCapacity">最新满充容量:</string>
    <string name="packDesignCapacity">Pack设计容量:</string>
    <string name="ShuntResistance">分流器阻值 :</string>
    <string name="totalVoltage">总 电 压: </string>
    <string name="averageVoltage">平均电压:</string>
    <string name="minimumOutputVoltage">最小输出电压:</string>
    <string name="maximumOutputVoltage">最大输出电压:</string>
    <string name="MinimumOutputVoltageChannel">最小输出电压通道:</string>
    <string name="MaximumOutputVoltageChannel">最大输出电压通道:</string>
    <string name="Ui_Uo">输出压差:</string>
    <string name="packModel">电池Pack型号:</string>
    <string name="CurrentCurrentValue">当前电流值:</string>
    <string name="AverCurrent">平均电流值:</string>
    <string name="maximumDischargeCurrent">最大放电电流:</string>
    <string name="maximumChargingCurrent">最大充电电流:</string>
    <string name="lowestTemperature">最低温度:</string>
    <string name="maximumTemperature">最高温度:</string>
    <string name="averageTemperature">平均温度:</string>
    <string name="TheOutputTemperature">输出温差:</string>
    <string name="MaximumTemperatureChannel">最高温度通道:</string>
    <string name="MinimumTemperatureChannel">最低温度通道:</string>
    <string name="T1">温度1:</string>
    <string name="T2">温度2:</string>
    <string name="T3">温度3:</string>
    <string name="T4">温度4:</string>
    <string name="SelfDischargeSwitchState">自放电开关状态</string>
    <string name="SelfHeatingSwitchState">自加热开关状态</string>
    <string name="PrechargeSwitchState">预充电开关状态</string>
    <string name="PredischargeSwitchingState">预放电开关状态</string>
    <string name="DischargeMOSSwitchState">放电MOS开关状态</string>
    <string name="ChargingMOSSwitchState">充电MOS开关状态</string>
    <string name="overVoltage">过压:</string>
    <string name="underVoltage">欠压:</string>
    <string name="VDifferH2lrg">压差H过大:</string>
    <string name="VDifferL2Lrg">压差L过大:</string>
    <string name="OCCHG">充电过流:</string>
    <string name="OCDSG">放电过流:</string>
    <string name="ChargingHighTemperature">充电高温:</string>
    <string name="ChrgLT">充电低温:</string>
    <string name="DischrgHT">放电高温:</string>
    <string name="DischrgLT">放电低温:</string>
    <string name="EstimatedDischargeTime">预计放电时间:</string>
    <string name="ExpectedFullTime">预计充满时间:</string>
    <string name="surplusCapacity">剩余容量:</string>
    <string name="cumulativeCharge">累计充电:</string>
    <string name="cycleIndex">循环次数:</string>
    <string name="CurrentOperatingMode">当前工作模式:</string>
    <string name="productInformation">产品信息</string>
    <string name="voltage">电压</string>
    <string name="current">电流</string>
    <string name="temperature">温度</string>
    <string name="switchState">开关状态</string>
    <string name="AbnormalNumber">异常次数</string>
    <string name="Other">其他</string>
    <string name="upgrading">正在升级</string>
    <string name="stopSearch">停止搜索</string>
    <string name="searching">正在搜索</string>
    <string name="Connecting">连接中</string>
    <string name="connected">已连接</string>
    <string name="SearchClosure">搜索已结束</string>
    <string name="hour">时</string>
    <string name="min">分</string>
    <string name="polymer">聚合物</string>
    <string name="ternary">三元</string>
    <string name="Lithium">铁锂</string>
    <string name="LiTiO">钛酸锂</string>
    <string name="series">串</string>

    <string name="SingleOVAlarm">单体过压告警</string>
    <string name="SingleOVPrtct">单体过压保护</string>
    <string name="SingleUVAlarm">单体欠压告警</string>
    <string name="SingleUVPrtct">单体欠压保护</string>
    <string name="ChrgOCAlarm">充电过流告警</string>
    <string name="ChrgOCPrtct">充电过流保护</string>
    <string name="DischrgOCAlarm">放电过流告警</string>
    <string name="DischrgOCPrtct">放电过流保护</string>
    <string name="ChrgHTAlarm">充电高温告警</string>
    <string name="ChrgHTPrtct">充电高温保护</string>
    <string name="ChrgLTAlarm">充电低温告警</string>
    <string name="CHrgLTPrtct">充电低温保护</string>
    <string name="CHrgExcessTDiffer">充电温差过大</string>
    <string name="DischrgHTAlarm">放电高温告警</string>
    <string name="DischrgHTPrtct">放电高温保护</string>
    <string name="DischrgLTAlarm">放电低温告警</string>
    <string name="DsichrgLTPrtct">放电低温保护</string>
    <string name="DsichrgExcessTDiff">放电温差过大</string>
    <string name="SOC2LowAlarm">SOC过低告警</string>
    <string name="VAcqFail">电压采集失效</string>
    <string name="TAcqFail">温度采集失效</string>
    <string name="ExcessVDiffAlarm_H">压差过大告警H</string>
    <string name="ExcessVDiffPrtct_H">压差过大保护H</string>
    <string name="ExcessVDiffAlarm_L">压差过大告警L</string>
    <string name="ExcessVDiffPrtct_L">压差过大保护L</string>
    <string name="ChrgSHORT">充电短路</string>
    <string name="DischrgSHORT">放电短路</string>
    <string name="MenoryErr">存储器故障</string>
    <string name="ChrgMOSFail">充电MOS失效</string>
    <string name="DischrgMOSFail">放电MOS失效</string>
    <string name="ChrgMOSHTAlarm">充电MOS高温告警</string>
    <string name="DischrgMOSHTAlarm">放电MOS高温告警</string>
    <string name="DischrgMOSHTPrtct">放电MOS高温保护</string>
    <string name="SelfDischrgMOSFail">自放电MOS失效</string>
    <string name="SelfHeatMOSFail">自加热MOS失效</string>
    <string name="PredischrgMOSFail">预放电MOS失效</string>
    <string name="ChargingWithNon_originalCharger">非原装充电器充电</string>
    <string name="Front_endChipAcquisitionFailure">前端芯片采集失效</string>
    <string name="CurrentAcquisitionCircuitFailed">电流采集电路失效</string>
    <string name="BatHTCausePermanFail">电池高温导致永久失效</string>
    <string name="BatLTCausePermanFail">电池低温导致永久失效</string>
    <string name="BatOVCausePermanFail">电池过压导致永久失效</string>
    <string name="BatUVCausePermanFail">电池欠压导致永久失效</string>
    <string name="VDiff2largeCausePermanFail">压差过大导致永久失效</string>
    <string name="PrechrgMOSFail">预充电MOS失效</string>
    <string name="CrrntTGreaterThanMaxCellT">当前温度大于电芯最高保存温度</string>
    <string name="CrrntTLessCellLowest">当前温度低于电芯最低保存温度</string>
    <string name="ChrgMOSHTPrtct">充电MOS高温保护</string>
    <string name="upgrade_exit">退出</string>
    <string name="Connected">已连接</string>
    <string name="histopryRead">读取</string>
    <string name="cycle">循环</string>
    <string name="readThe">读取第</string>
    <string name="remember">需知：0代表所有循环</string>
    <string name="CRC_ERR">校验错误</string>
    <string name="historyStopRead">停止读取</string>
    <string name="historyReadErr">读取失败</string>
    <string name="historyErrHint">请选择读取第几个循环</string>
    <string name="boYing">博鹰</string>
    <string name="BoYingWithReceive">博鹰带接收</string>
    <string name="JiYi">极翼</string>
</resources>