<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/TabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.tabs.TabItem
                android:text="@string/real_MainInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:text="@string/real_SingleV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:text="@string/real_Warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:text="@string/real_HistoricalExtremum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:id="@+id/mLinear"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>