<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/remember"
        android:textColor="#FF6666"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/readThe"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />
        <EditText
            android:id="@+id/history_cycle"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/cycle"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
<!--        <Space-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="wrap_content"/>-->
        <Button
            android:id="@+id/history_read"
            android:textSize="16sp"
            android:text="@string/histopryRead"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/history_setSaveTime"
            android:text="设置存储间隔"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/history_process"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="SOC"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="最大电压"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="最小电压"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="电流"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="温度"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="故障代码"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recyclerView"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:scrollbarSize="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>