<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="360dp"
    android:layout_height="500dp">
    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/upgrade"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_below="@+id/search_LinearLayout"
        android:id="@+id/upgrade_LinearLayout"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/binFileSpinner"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="40dp"/>
        <Button
            android:id="@+id/upgrade_Bt"
            android:text="@string/upgradeBt"
            android:textColor="@color/black"
            android:layout_marginLeft="3dp"
            android:layout_width="0dp"
            android:layout_weight="2.8"
            android:layout_height="40dp"
            android:layout_marginStart="3dp" />
        <Button
            android:text="@string/clear"
            android:textColor="@color/black"
            android:id="@+id/clearText"
            android:layout_width="0dp"
            android:layout_marginLeft="3dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:layout_marginStart="3dp" />
    </LinearLayout>
    <ProgressBar
        android:visibility="gone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:id="@+id/upgrade_progressBar"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <androidx.cardview.widget.CardView
        android:layout_margin="18dp"
        app:contentPadding="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/file_content"
            android:gravity="left|top"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"
            android:padding="8dp"
            android:textColor="@color/black"
            android:scrollbarStyle="outsideInset"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

<!--    <TextView-->
<!--        android:text="@string/history"-->
<!--        android:textSize="20sp"-->
<!--        android:gravity="center"-->
<!--        android:textColor="@color/black"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"/>-->
<!--    <LinearLayout-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--        <Button-->
<!--            android:text="@string/readAndSave"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"/>-->
<!--    </LinearLayout>-->

</LinearLayout>